refactor: orElseThrow()로 null 처리 패턴 통일
.orElse(null) + if-null 패턴을
.orElseThrow(() -> new NoSuchElementException(...))로 변경한다.
GlobalExceptionHandler에서 NoSuchElementException을 404로 매핑하므로
기존 동작이 유지된다.
ProductController, OptionController의 @ExceptionHandler 제거도 포함한다.

Co-Authored-By: Claude <noreply@anthropic.com>